--- a/src/components/meetups/MeetupItem.module.css
+++ b/src/components/meetups/MeetupItem.module.css
@@ -22,7 +22,7 @@
   
   .content h3 {
     font-size: 1.25rem;
-    color: #2c292b;
+    color: #ffffff;
   }
   
   .actions {
@@ -33,9 +33,9 @@
   .actions button {
     font: inherit;
     cursor: pointer;
-    color: #77002e;
-    border: 1px solid #77002e;
-    background-color: transparent;
+    color: #e9dee2;
+    border: 1px solid #dae4ee;
+    background-color: #b9d3ec98;
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
   }
@@ -43,4 +43,5 @@
   .actions button:hover,
   .actions button:active {
     background-color: #ffe2ed;
+    color: #77002e;
   }
