--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,14 +4,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #77002e;
+  background-color:  rgb(8, 28, 66);
   padding: 0 10%;
 }
 
 .logo {
   font-size: 2rem;
   color: white;
-  font-weight: bold;
 }
 
 .header ul {
@@ -29,7 +28,7 @@
 .header a {
   text-decoration: none;
   font-size: 1.5rem;
-  color: #fcb8d2;
+  color: #f8f4f6;
 }
 
 .header a:hover,
@@ -39,7 +38,7 @@
 }
 
 .badge {
-  background-color: #cc2062;
+  background-color: #d0a6e9;
   color: white;
   border-radius: 12px;
   padding: 0 1rem;
