--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;1,500&family=Preahvihear&family=Roboto+Mono:wght@300&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Cabin', sans-serif;
   margin: 0;
-  background-color: #fcf3f6;
+  background-color: #f4ebfc;
 }
 
 h1 {
